@@ -1,3 +1,4 @@
+Add network split() function.
 
 Re-arrange the distribution a bit.
 
